--- a/services/.env
+++ b/services/.env
@@ -1,5 +1,8 @@
 
 
 # эти переменные для Grafana должны называться именно так
-GRAFANA_USER=''
-GRAFANA_PASS=''
+GRAFANA_USER='admin'
+GRAFANA_PASS='grafana'
+
+MODEL_DIR=./models
+PORT=8765
